[package]
name = "capscan"
version = "0.1.0"
edition = "2021"
description = "Diff the capability surface (unsafe, FFI, process/network/fs access, build scripts) of a crate between two versions before you `cargo update`."
license = "MIT OR Apache-2.0"

[[bin]]
name = "cargo-capscan"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
home = "0.5"
tempfile = "3"

[profile.release]
opt-level = 2
